force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_ARE_Subscription__c.field-meta.xml
<CustomField>
    <fullName>NF_ARE_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARE Subscription</label>
    <type>Checkbox</type>
</CustomField>