force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Bundle_Header_Product__c.field-meta.xml
<CustomField>
    <fullName>NF_Bundle_Header_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Header Product</label>
    <type>Checkbox</type>
</CustomField>