force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Calculated_Renewed_Price__c.field-meta.xml
<CustomField>
    <fullName>NF_Calculated_Renewed_Price__c</fullName>
    <label>Calculated Renewed Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>