force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Group_Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>NF_Group_Segment_Key__c</fullName>
    <label>Group Segment Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>