force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Group_Segment_Label__c.field-meta.xml
<CustomField>
    <fullName>NF_Group_Segment_Label__c</fullName>
    <label>Group Segment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>