force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Renewal_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Escalation__c</fullName>
    <formula>IF (NF_Group_Segment_Index__c = 1, (1+SBQQ__Contract__r.NF_Renewal_Uplift_Rate__c)^1, 
IF (NF_Group_Segment_Index__c = 2, (1+SBQQ__Contract__r.NF_Renewal_Uplift_Rate__c)^2, 
IF (NF_Group_Segment_Index__c = 3, (1+SBQQ__Contract__r.NF_Renewal_Uplift_Rate__c)^3, 
IF (NF_Group_Segment_Index__c = 4, (1+SBQQ__Contract__r.NF_Renewal_Uplift_Rate__c)^4,
IF (NF_Group_Segment_Index__c = 5, (1+SBQQ__Contract__r.NF_Renewal_Uplift_Rate__c)^5,				
0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Escalation %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>