force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Renewal_Rate_Changed__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rate_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Rate Changed</label>
    <type>Checkbox</type>
</CustomField>