force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Subscription_Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NF_Subscription_Renewal_End_Date__c</fullName>
    <formula>ADDMONTHS(SBQQ__SubscriptionEndDate__c,SBQQ__Contract__r.SBQQ__RenewalTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Renewal End Date</label>
    <type>Date</type>
</CustomField>