force-app/main/default/objects/SBQQ__Subscription__c/fields/NF_Subscription_Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NF_Subscription_Renewal_Start_Date__c</fullName>
    <formula>ADDMONTHS(SBQQ__SubscriptionStartDate__c,SBQQ__Contract__r.SBQQ__RenewalTerm__c)</formula>
    <label>Subscription Renewal Start Date</label>
    <type>Date</type>
</CustomField>